[workspace]
members = [
]


[package]
name = "c2rust_out"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "c2rust_out"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]


[[bin]]
path = "src/xwax.rs"
name = "xwax"

[dependencies]
libc = "0.2"




